examples/kubernetes/notes.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  selector:
    app: notes
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes
spec:
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: notes
        image: minvs1/airnote:latest
        command: ["npm", "start"]
        args: ["--hostname 0.0.0.0"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "20m"
        ports:
        - containerPort: 3000
