examples/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - airnote.tld
    secretName: airnote-tls
  rules:
  - host: airnote.tld
    http:
      paths:
      - path: /
        backend:
          serviceName: notes
          servicePort: 3000
